# cs-project6-car-inventory-performance

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/docker/: docker-compose.yml  init.sql
backend/sql/: schema.sql  seed.sql
backend/src/: main.cpp
backend/src/Main/: Main.cpp
backend/src/TestDrive/: TestDrive.cpp  TestDrive.h
backend/src/db/: db_connection.cpp  db_connection.h
backend/src/modules/customer/: customer.cpp  customer.h
backend/src/modules/images/: images.cpp  images.h
backend/src/modules/inventory/: inventory.cpp  inventory.h  inventory_model.cpp  inventory_model.h  inventory_routes.cpp
backend/src/modules/sales/: sales.cpp  sales.h
backend/src/modules/test_drive/: tes_drive_controller.h  test_drive.cpp  test_drive.h  test_drive_controller.cpp  test_drive_controller.h  test_drive_routes.cpp  test_drive_routes.h  test_drive_service.cpp  test_drive_service.h
backend/test/: CMakeLists.txt
backend/test/customer_tests/: customer_tests.cpp
backend/test/images_tests/: ImagesTest.cpp
backend/test/inventory_tests/: CMakeLists.txt  InventoryTest.cpp
backend/test/sales_tests/: CMakeLists.txt  SalesTest.cpp
backend/test/test_drive_tests/: CMakeLists.txt  TestDriveTest.cpp
docker/: docker-compose.yml  dockerfile  init.sql  postgresql.conf
frontend/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/frontend/src/: App.css  App.tsx  index.css
frontend/frontend/src/components/: FeatureButtons.css  FeatureButtons.tsx  Header.css  Header.tsx  ImageManager.css  ImageManager.tsx  InvoiceModal.css  InvoiceModal.tsx  Sidebar.css  Sidebar.tsx  TestDriveTable.css  TestDriveTable.tsx  TestDriveView.tsx  VehicleFilter.css  VehicleFilter.tsx  VehicleInfoCard.css  VehicleInfoCard.tsx  VehicleViewInfo.css  VehicleViewInfo.tsx
frontend/frontend/src/layouts/: MainLayout.css  MainLayout.tsx
frontend/frontend/src/pages/: DashboardPage.css  DashboardPage.tsx
frontend/frontend/src/pages/Customer/: AddCustomerPage.tsx  CustomerDetailsPage.tsx  CustomerForm.css  CustomerForm.tsx  CustomersPage.css  CustomersPage.tsx  EditCustomerPage.tsx
frontend/frontend/src/pages/Sales/: AddSalesPage.css  AddSalesPage.tsx  SalesPage.css  SalesPage.tsx
frontend/frontend/src/pages/TestDrive/: AddTestDrivePage.css  AddTestDrivePage.tsx  EditTestDrivePage.css  EditTestDrivePage.tsx  TestDriveCustomerSelectPage.css  TestDriveCustomerSelectPage.tsx  TestDrivePage.css  TestDrivePage.tsx  TestDriveVehicleSelectPage.tsx  TestDriveViewPage.css  TestDriveViewpage.tsx
frontend/frontend/src/pages/Vehicle/: AddVehiclePage.tsx  EditVehiclePage.tsx  VehiclesPage.css  VehiclesPage.tsx  ViewVehicle.tsx
frontend/frontend/src/routes/: AppRoutes.tsx
frontend/frontend/src/services/: api.ts  customerService.ts  imageService.ts  salesService.ts  testDriveService.ts  vehicleService.ts
frontend/frontend/src/styles/: theme.css
frontend/frontend/src/types/: billOfSale.ts  customer.ts  enums.ts  sales.ts  testDrive.ts  vehicle.ts
